[package]
name = "python-rust-library"
version = "0.1.0"
authors = ["marcos"]

[lib]
name = "mvrpl"
crate-type = ["dylib"]

[dependencies]
curl = "0.2.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
default-features = false
features = ["python27-sys"]